staging-tls/kosice-map.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: kosice
  name: kosice
spec:
  replicas: 1
  selector:
    matchLabels:
      run: kosice
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: kosice
    spec:
      containers:
      - image: quay.io/kucerakk/nginx
        name: kosice
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        volumeMounts:
        - name: kosice
          mountPath: /usr/share/nginx/html/
      volumes:
        - name: kosice
          configMap: 
            name: kosice
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: kosice
  name: kosice
  selfLink: /api/v1/namespaces/default/services/kosice
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: kosice
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
