staging-tls/ingress-rules-tls-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - kosice.freeddns.org
    secretName: kosice-tls
  - hosts:
    - bratislava.freeddns.org
    secretName: bratislava-tls
  rules:
  - host: kosice.freeddns.org
    http:
      paths:
      - path: /
        backend:
          service:
            name: kosice
            port:
              number: 80 
        pathType: Prefix
  - host: bratislava.freeddns.org
    http:
      paths:
      - path: /
        backend:
          service:
            name: bratislava
            port:
              number: 80
        pathType: Prefix
